--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Nairobi School — Alumni Association | To The Uttermost</title>
+    <meta name="description" content="Nairobi School Alumni Association. Documenting over 120 years of excellence. Contribute to the commemorative book and connect with fellow Patcherians." />
+    <meta name="author" content="Nairobi School Alumni Association" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <link rel="icon" type="image/png" href="/impala-logo.png" />
+
+    <meta property="og:title" content="Nairobi School — Alumni Association" />
+    <meta property="og:description" content="Documenting the legacy of Nairobi School. To The Uttermost. Est. 1902." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/d/de/Administration_block_at_Nairobi_School.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Nairobi School — Alumni Association" />
+    <meta name="twitter:description" content="To The Uttermost. Est. 1902." />
+    <meta name="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/d/de/Administration_block_at_Nairobi_School.jpg" />
   </head>
 
   <body>
